Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4665

crash when referencing missing function in a subquery

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.3, 5.5.31, 5.3.12
    • 10.0.5, 5.5.32, 5.3.13
    • None
    • None

    Description

      Version: '10.0.3-MariaDB'  mariadb.org binary distribution
      [ERROR] mysqld got exception 0xc0000005 ;
       
      mysqld.exe!Item_func_sp::result_type()[item_func.cc:6596]
      mysqld.exe!subselect_engine::set_row()[item_subselect.cc:3529]
      mysqld.exe!subselect_single_select_engine::fix_length_and_dec()[item_subselect.cc:3547]
      mysqld.exe!Item_singlerow_subselect::fix_length_and_dec()[item_subselect.cc:1136]
      mysqld.exe!Item_subselect::fix_fields()[item_subselect.cc:304]
      mysqld.exe!Item_cond::fix_fields()[item_cmpfunc.cc:4340]
      mysqld.exe!TABLE_LIST::prep_where()[table.cc:4209]
      mysqld.exe!setup_conds()[sql_base.cc:8704]
      mysqld.exe!mysql_prepare_delete()[sql_delete.cc:491]
      mysqld.exe!mysql_delete()[sql_delete.cc:94]
      mysqld.exe!mysql_execute_command()[sql_parse.cc:3460]
      mysqld.exe!mysql_parse()[sql_parse.cc:6181]
      mysqld.exe!dispatch_command()[sql_parse.cc:1277]
      mysqld.exe!do_command()[sql_parse.cc:989]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:224]
      mysqld.exe!io_completion_callback()[threadpool_win.cc:568]

      drop table if exists `t`,`v`;
      create table `t`(`a` int)engine=innodb;
      create or replace view `v` as select 1 from `t` where `a`;
      delete from `v` where (select `g`());

      Attachments

        Activity

          People

            serg Sergei Golubchik
            sbester1 sbester1
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.