MDEV-4665 crash when referencing missing function in a subquery

don't ignore the return value fix_fields()